--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,3 +1,181 @@
+// Common
+.title {
+  font-size: var(--font-size-title);
+  text-align: center;
+}
+
 .home {
-  background-color: red;
+  z-index: -1;
+  background: #fff;
+}
+
+// Section: Slider
+.slider {
+  position: relative;
+  margin-bottom: 106px;
+  z-index: 1;
+
+  // Image
+  .slide {
+    border-radius: var(--radius-large);
+    aspect-ratio: 16/7;
+    width: 100%;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  // Caption
+  .caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    text-align: center;
+
+    .text {
+      box-shadow: var(--box-shadow-primary);
+      border-radius: var(--radius-large);
+
+      .title {
+        font-size: var(--font-size-display);
+        font-weight: lighter;
+        text-transform: uppercase;
+        color: var(--color-primary);
+      }
+      .sub-title {
+        font-size: var(--font-size-title);
+      }
+    }
+  }
+  // Statistic
+  .stats {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transform: translateY(50%);
+
+    .stats-card {
+      border-radius: var(--radius-large);
+      background-color: var(--color-white);
+      aspect-ratio: 300/187;
+      width: 260px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      box-shadow: var(--box-shadow-primary);
+
+      .value {
+        font-size: var(--font-size-heading);
+      }
+    }
+  }
+}
+
+// Section: about
+.about::before {
+  content: "";
+  background-color: var(--background-light);
+  inset: -30px;
+  position: absolute;
+  z-index: 0;
+  transform: rotate(2deg);
+  border-radius: var(--radius-large);
+}
+.about {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  // text
+  .text {
+    max-width: 600px;
+    text-align: center;
+    z-index: 1;
+
+    .title {
+      font-size: var(--font-size-title);
+    }
+
+    .desc {
+    }
+  }
+  // History
+  .history {
+    min-height: 120px;
+    z-index: 1;
+
+    .timeline {
+      position: relative;
+      height: 300px;
+
+      .event {
+        position: absolute;
+
+        .content {
+          transform-origin: center center;
+          transition: transform 0.3s ease;
+          display: inline-block;
+          cursor: pointer;
+
+          .year {
+            font-size: var(--font-size-subtitle);
+          }
+        }
+
+        .content:hover {
+          transform: scale(1.2);
+        }
+      }
+
+      .event::before {
+        content: "";
+        top: 0;
+        bottom: 0;
+        left: -48px;
+        width: 20px;
+        height: 20px;
+        border-radius: 100px;
+        background: #0d8cf0;
+        z-index: 100;
+        position: absolute;
+      }
+    }
+
+    .timeline::before {
+      content: "";
+      top: 0;
+      bottom: 0;
+      width: 4px;
+      height: 100%;
+      background: #0d8cf0;
+      border-radius: 2px;
+      z-index: 100;
+      position: absolute;
+      transform: translateX(calc(10px - 50%));
+    }
+
+    .detail {
+      z-index: 1;
+    }
+
+    .image {
+      position: relative;
+      width: 100%;
+      height: 300px;
+      display: flex;
+      justify-content: right;
+      align-items: center;
+
+      .item {
+        position: absolute;
+        transform-origin: center center;
+      }
+    }
+  }
 }
