--- a/src/pages/Home/section/Slider/Slider.module.scss
+++ b/src/pages/Home/section/Slider/Slider.module.scss
@@ -25,15 +25,28 @@
     text-align: center;
 
     .text {
-      box-shadow: var(--box-shadow-primary);
-      border-radius: var(--radius-large);
+      // border-radius: var(--radius-large);
+      background-color: var(--background-backdrop-invert);
 
       .title {
-        font-size: var(--font-size-display);
+        font-size: var(--font-size-hero);
         font-weight: lighter;
         text-transform: uppercase;
+        // color: var(--color-primary);
+        color: #fff;
         color: var(--color-primary);
+        position: relative;
       }
+
+      // .title::after {
+      //   content: "";
+      //   background-color: var(--color-primary);
+      //   inset: 0;
+      //   position: absolute;
+      //   z-index: -1;
+      //   opacity: 0.5;
+      // }
+
       .sub-title {
         font-size: var(--font-size-title);
       }
