--- a/src/pages/Home/section/Admission/Admission.module.scss
+++ b/src/pages/Home/section/Admission/Admission.module.scss
@@ -15,6 +15,7 @@
 
   .content {
     .form {
+      max-width: 550px;
       box-shadow: var(--box-shadow-primary);
       background-color: var(--color-white);
       border-radius: var(--radius-large);
