--- a/src/pages/Home/section/Slider/Slider.module.scss
+++ b/src/pages/Home/section/Slider/Slider.module.scss
@@ -1,3 +1,4 @@
+@use "/src/styles/responsive.scss" as *;
 // Section: Slider
 .slider {
   position: relative;
@@ -10,69 +11,141 @@
     aspect-ratio: 16/7;
     width: 100%;
     overflow: hidden;
+    position: relative;
 
     img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
-  }
+    // Caption
+    .caption {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%) translateY(-50%);
+      text-align: center;
 
-  // Caption
-  .caption {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    text-align: center;
+      .text {
+        background-color: var(--background-backdrop-invert);
 
-    .text {
-      // border-radius: var(--radius-large);
-      background-color: var(--background-backdrop-invert);
+        .title {
+          font-size: var(--font-size-hero);
+          font-weight: lighter;
+          text-transform: uppercase;
+          color: #fff;
+          color: var(--color-primary);
+          position: relative;
+        }
 
-      .title {
-        font-size: var(--font-size-hero);
-        font-weight: lighter;
-        text-transform: uppercase;
-        // color: var(--color-primary);
-        color: #fff;
-        color: var(--color-primary);
-        position: relative;
-      }
-
-      // .title::after {
-      //   content: "";
-      //   background-color: var(--color-primary);
-      //   inset: 0;
-      //   position: absolute;
-      //   z-index: -1;
-      //   opacity: 0.5;
-      // }
-
-      .sub-title {
-        font-size: var(--font-size-title);
+        .sub-title {
+          font-size: var(--font-size-title);
+        }
       }
     }
   }
+
   // Statistic
   .stats {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    transform: translateY(50%);
+    // transform: translateY(-50%);
+    margin-top: -50px;
+    position: relative;
+    z-index: 1;
 
-    .stats-card {
-      border-radius: var(--radius-large);
+    .inner {
+      flex-wrap: wrap;
       background-color: var(--color-white);
-      aspect-ratio: 300/187;
-      width: 260px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+      border-radius: var(--radius-large);
       box-shadow: var(--box-shadow-primary);
 
-      .value {
-        font-size: var(--font-size-heading);
+      .stats-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 40px;
+
+        .value {
+          font-size: var(--font-size-heading);
+        }
+      }
+    }
+  }
+}
+
+@include max-large {
+  .slider {
+    .stats {
+      .inner {
+        .stats-item {
+          padding: 30px;
+          .value {
+            font-size: var(--font-size-title);
+          }
+        }
+      }
+    }
+  }
+}
+
+@include max-desktop {
+  .slider {
+    .slide {
+      .caption {
+        .text {
+          .title {
+            font-size: var(--font-size-heading);
+          }
+        }
+      }
+    }
+    .stats {
+      .inner {
+        .stats-item {
+          padding: 20px;
+        }
+      }
+    }
+  }
+}
+
+@include max-tablet {
+  .slider {
+    .slide {
+      aspect-ratio: 1/1;
+
+      // .caption {
+      //   .text {
+      //     .title {
+      //       font-size: 20px;
+      //     }
+      //     .sub-title {
+      //       font-size: var(--font-size-body);
+      //     }
+      //   }
+      // }
+    }
+    .stats {
+      margin-top: 0;
+
+      .inner {
+        .stats-item {
+          padding: 10px;
+        }
+      }
+    }
+  }
+}
+
+@include max-mobile {
+  .slider {
+    .slide {
+      .caption {
+        .text {
+          .sub-title {
+            font-size: var(--font-size-body);
+          }
+        }
       }
     }
   }
